; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showcqt.c_convert_axis_pixel_format.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_avf_showcqt.c_convert_axis_pixel_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AV_PIX_FMT_RGBA = common dso_local global i32 0, align 4
@AV_PIX_FMT_YUVA444P = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @convert_axis_pixel_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @convert_axis_pixel_format(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  switch i32 %3, label %8 [
    i32 131, label %4
    i32 128, label %6
    i32 129, label %6
    i32 130, label %6
  ]

4:                                                ; preds = %1
  %5 = load i32, i32* @AV_PIX_FMT_RGBA, align 4
  store i32 %5, i32* %2, align 4
  br label %8

6:                                                ; preds = %1, %1, %1
  %7 = load i32, i32* @AV_PIX_FMT_YUVA444P, align 4
  store i32 %7, i32* %2, align 4
  br label %8

8:                                                ; preds = %1, %6, %4
  %9 = load i32, i32* %2, align 4
  ret i32 %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
